<resources>
    <string name="app_name">Magazyn</string>
    <string name="status_text">Status</string>
    <string name="what_to_do">Wybierz co chcesz zrobić</string>
    <string name="scan">Skanuj</string>
    <string name="add">Dodaj</string>
    <string name="show_all_positions">Lista</string>
    <string name="localisation_menu">Lokalizacja Menu</string>
    <string name="localisation_detail_info_text">Szczegóły Lokalizacji:</string>
    <string name="product_detail_info_text">Szczegóły Produktu:</string>
    <string name="localisation">Lokalizacja</string>
    <string name="product">Produkt</string>
    <string name="product_in_localisation">Szczegóły</string>
    <string name="scan_localisation">Skanuj Loklizacje</string>
    <string name="scan_product">Skanuj Produkt</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="index">Index</string>
    <string name="name">Nazwa</string>
    <string name="quantity">Ilość</string>
    <string name="save">Zapisz</string>
    <string name="addProdToLOC">Dodaj Produkt</string>
    <string name="addLocToProd">Dodaj Lokalizację</string>
    <string name="update">Aktualizuj</string>
</resources>
