<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbarStyle="outsideOverlay"
    android:paddingBottom="50dp"
    tools:context=".fragment.ProductLocalisationFragment">


    <com.google.android.material.card.MaterialCardView
        style="@style/custom_card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardPreventCornerOverlap="true"
        app:layout_anchorGravity="center">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/menuTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/menuInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="20dp"
                android:text="@string/what_to_do"
                app:layout_constraintEnd_toEndOf="@+id/menuTitle"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="@+id/menuTitle"
                app:layout_constraintTop_toBottomOf="@+id/menuTitle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/scanLocalisationButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:padding="20dp"
                android:text="@string/scan_localisation"
                app:layout_constraintEnd_toStartOf="@+id/scanProductButton"
                app:layout_constraintHorizontal_bias="0.123"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menuInfo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/scanProductButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:padding="20dp"
                android:text="@string/scan_product"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.873"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menuInfo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/showAllButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:padding="20dp"
                android:text="@string/show_all_positions"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/scanLocalisationButton"
                app:layout_constraintHorizontal_bias="0.032"
                app:layout_constraintStart_toStartOf="@+id/scanLocalisationButton"
                app:layout_constraintTop_toBottomOf="@+id/scanLocalisationButton"
                app:layout_constraintVertical_bias="1.0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:padding="20dp"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/scanProductButton"
                app:layout_constraintHorizontal_bias="0.869"
                app:layout_constraintStart_toStartOf="@+id/scanProductButton"
                app:layout_constraintTop_toBottomOf="@+id/scanProductButton"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</ScrollView>