<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingBottom="50dp"
    tools:context=".fragment.ProductAddEditFragment">

    <com.google.android.material.card.MaterialCardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/custom_card_layout"
        app:cardPreventCornerOverlap="true"
        app:contentPaddingTop="72dp"
        app:contentPaddingBottom="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productIndex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/index"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editProductIndex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/quantity"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editProductQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveProduct"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="26dp"
                android:text="@string/save" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</ScrollView>